# handicam

./: CMakeLists.txt  README.md  capture.cpp  config.cpp  config.hpp  config.xml  grid.cpp  grid.hpp  markers.cpp  markers.hpp  match_stream.cpp  source.cpp  source.hpp  stitch_stream.cpp  stitcher.cpp  stitcher.hpp  util.cpp  util.hpp
cmake/: FindV4L2.cmake
parts/: markerboard_etch.dxf  markerboard_profile.dxf
